Organized stylesheets a bit better and fixed portfolio-lomb mobile responsiveness.

--- a/src/stylesheets/cv.css
+++ b/src/stylesheets/cv.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'Palatino Linotype';
-    src: url('./fonts/Palatino Linotype.ttf') /* Safari, Android, iOS */
+    src: url('../fonts/Palatino Linotype.ttf') /* Safari, Android, iOS */
 }
 * {
     box-sizing: border-box;
