--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -8,6 +8,7 @@ $GREY4: #ABAEB0;
 $GREY5: #6D6F70;
 $GREY7: #444;
 $GREY8: #1A1E23;
+$BREAKPOINT: 1000px;
 
 a {
   color: coral;
@@ -105,13 +106,13 @@ nav {
   }
 }
 
-@media only screen and (min-width:1200px) {
+@media only screen and (min-width:$BREAKPOINT) {
   .wrapper__container {
     grid-template-columns: 20% auto;
   }
 }
 
-@media only screen and (max-width:1200px) {
+@media only screen and (max-width:$BREAKPOINT) {
   .wrapper__container {
     grid-template-columns: auto;
   }
@@ -120,3 +121,20 @@ nav {
 h1, h2, h3, h4, h5, h6 {
   font-family: $fancy-font;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.justify-space-around {
+  justify-content: space-around;
+}
+
+.align-center {
+  align-items: center;
+}
+
