Changed portfolio descriptions to HR-friendly subtitle + bulletpoints format.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -6,6 +6,7 @@ $GREY2: #E9EDF0;
 $GREY3: #D0D4D6;
 $GREY4: #ABAEB0;
 $GREY5: #6D6F70;
+$GREY6: #555;
 $GREY7: #444;
 $GREY8: #1A1E23;
 $BREAKPOINT: 1000px;
