--- a/src/stylesheets/cv.scss
+++ b/src/stylesheets/cv.scss
@@ -74,12 +74,13 @@ li {
     word-wrap:break-word;
 }
 .circle-icon {
-    background: hsla(0,0%,0%,0.8) !important;
+    background: hsla(0,0%,0%,0.6) !important;
     color: white;
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
-    padding: 2px 8px 4px 8px;
+    padding: 5px 8px;
+    margin-top: -0.3em;
 }
 
 .name {
